dfir_rs/tests/compile-fail/surface_degenerate_merge.rs
use dfir_rs::dfir_syntax;

fn main() {
    let mut df = dfir_syntax! {
        union();
    };
    df.run_available();
}
